--- a/app/views/devices/_video_table.html.erb
+++ b/app/views/devices/_video_table.html.erb
@@ -23,7 +23,7 @@
           <%= link_to image_tag("download_icon.png", id: 'download-img', size: '30x30'), download_path(device: "#{locals[:deviceid]}", file: video[:name], target: "_self") %>
           </td>
           <td>
-          <%= image_tag("down_arrow.png", id: 'expand-img', size: '30x30', class: 'rotate-image') %>
+          <%= image_tag("down_arrow_hover.png", id: 'expand-img', size: '30x30', class: 'rotate-image') %>
           </td>
       </tr>
       <tr class="hidden-video" id="<%= video[:name] %>">
