--- a/app/views/layouts/static_pages/_contact.html.erb
+++ b/app/views/layouts/static_pages/_contact.html.erb
@@ -15,13 +15,13 @@
             <li>
               <b>Derek Hugh Johnson</b>
                 <ul>
-                  <li>djohnson69@redroid.net</li>
+                  <li>djohnson@redroid.net</li>
                 </ul>
             </li>
             <li>
               <b>Greg "Greg's Gonna Greg" Smith</b>
                 <ul>
-                  <li>gsmith420@redroid.net</li>
+                  <li>gsmith@redroid.net</li>
                 </ul>
             </li>
             <li>
