--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,26 @@
 #header{
   text-align: center;
   margin-bottom: 30px;
+  img {
+    width: 100%;
+    height: 100%;
+  }
   td{
     padding-left: 45px;
   }
   .form-control{
     text-align: left;
+  }
+
+  h1{
+    margin-bottom: 30px;
+  }
+  
+  .search-control-group{
+    max-width: 650px;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+
   }
 }
